Changing lead image + writing through all sections

--- a/2025/2025-06-22-wir.md
+++ b/2025/2025-06-22-wir.md
@@ -1,8 +1,8 @@
 # tktk
 ## tktk
 
-![Smartphone with a folder open containing several social apps](https://images.unsplash.com/photo-1579869847514-7c1a19d2d2ad?q=80&w=2534&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
-*Photo illustration by dole777 via Unsplash*
+![Smartphone with a folder open containing several social apps](https://images.unsplash.com/photo-1520525003249-2b9cdda513bc?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
+*Photo illustration by Louis Velazquez via Unsplash*
 
 <hr>
 
@@ -14,9 +14,7 @@
 
 <hr>
 
-**Lead item:** Social surpassed TV as consumers' primary news source for the first time, according to a new Reuters/Oxford study. https://www.niemanlab.org/2025/06/for-the-first-time-social-media-overtakes-tv-as-americans-top-news-source/
-
-- Full Reuters report: https://reutersinstitute.politics.ox.ac.uk/digital-news-report/2025
+The US Senate has passed the GENIUS Act, a landmark bill that establishes federal guardrails for dollar-pegged stablecoins and creates a regulated pathway for private companies to issue digital dollars. The bill, which passed with a 68-30 vote, marks a significant legislative victory for the crypto industry, which invested heavily in the 2024 election cycle. ([CNBC](https://www.cnbc.com/2025/06/17/genius-stablecoin-bill-crypto.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | NBC News says the bill surfaced new divisions in the Democratic Senate caucus: https://www.nbcnews.com/politics/congress/democratic-divisions-emerge-congress-tackles-crypto-regulation-rcna212886 | Bessent sees stablecoins bolstering USD's status globally. https://decrypt.co/326021/treasury-secretary-bessent-stablecoins-dollar-supremacy | Trump urged swift passage in the House. https://www.theblock.co/post/358821/trump-urges-house-to-pass-genius-stablecoin-bill Politico coverage of same: https://www.politico.com/live-updates/2025/06/18/congress/trump-calls-on-house-gop-to-quickly-adopt-clean-version-of-senate-passed-crypto-bill-00414161 | Circle's newly listed shares soared: https://www.coindesk.com/markets/2025/06/19/circle-rockets-after-stablecoin-bill-clears-senate-pushes-post-ipo-rally-to-over-500 | Guardian on Democrats crossing the aisle to vote for the Genius Act: https://www.theguardian.com/us-news/2025/jun/18/crypto-stablecoins-senate
 
  <hr>
 
@@ -29,15 +27,16 @@
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- The US Senate has passed the GENIUS Act, a landmark bill that establishes federal guardrails for dollar-pegged stablecoins and creates a regulated pathway for private companies to issue digital dollars. The bill, which passed with a 68-30 vote, marks a significant legislative victory for the crypto industry, which invested heavily in the 2024 election cycle. ([CNBC](https://www.cnbc.com/2025/06/17/genius-stablecoin-bill-crypto.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | NBC News says the bill surfaced new divisions in the Democratic Senate caucus: https://www.nbcnews.com/politics/congress/democratic-divisions-emerge-congress-tackles-crypto-regulation-rcna212886 | Bessent sees stablecoins bolstering USD's status globally. https://decrypt.co/326021/treasury-secretary-bessent-stablecoins-dollar-supremacy | Trump urged swift passage in the House. https://www.theblock.co/post/358821/trump-urges-house-to-pass-genius-stablecoin-bill Politico coverage of same: https://www.politico.com/live-updates/2025/06/18/congress/trump-calls-on-house-gop-to-quickly-adopt-clean-version-of-senate-passed-crypto-bill-00414161 | Circle's newly listed shares soared: https://www.coindesk.com/markets/2025/06/19/circle-rockets-after-stablecoin-bill-clears-senate-pushes-post-ipo-rally-to-over-500 | Guardian on Democrats crossing the aisle to vote for the Genius Act: https://www.theguardian.com/us-news/2025/jun/18/crypto-stablecoins-senate
-
-- Coinbase is seeking approval from the US Securities and Exchange Commission (SEC) to offer "tokenized equities," a move that would allow the crypto exchange to offer stock trading via blockchain technology, potentially competing with retail brokerages like Robinhood and Charles Schwab. If approved, this could open a new business segment for Coinbase and facilitate faster trading and reduced costs. ([Reuters](https://www.reuters.com/business/coinbase-seeking-us-sec-approval-offer-blockchain-based-stocks-2025-06-17/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- Social surpassed TV as consumers' primary news source for the first time, according to a new Reuters/Oxford study. https://www.niemanlab.org/2025/06/for-the-first-time-social-media-overtakes-tv-as-americans-top-news-source/ | Full Reuters report: https://reutersinstitute.politics.ox.ac.uk/digital-news-report/2025
 
 - Amazon's workforce is expected to shrink in the coming years as the company adopts more generative artificial intelligence tools and agents, according to CEO Andy Jassy. In a memo to employees, Jassy stated that the company will need fewer people for certain jobs, but more people for others, and that employees should learn how to use AI tools to get more done with smaller teams. ([CNBC](https://www.cnbc.com/2025/06/17/ai-amazon-workforce-jassy.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | Blog post by CEO Andy Jassy: https://www.aboutamazon.com/news/company-news/amazon-ceo-andy-jassy-on-generative-ai | Jassy recommends new trainings: https://fortune.com/2025/06/19/amazons-andy-jassy-suggests-employees-go-to-ai-trainings-to-learn-how-to-get-more-done-with-scrappier-teams/
 
+- **Coinbase is seeking approval** from U.S. market regulators to offer "tokenized equities." The move would allow the crypto platform to offer stock trading via blockchain networks, potentially competing with retail brokerages like Robinhood and Charles Schwab. ([Reuters](https://www.reuters.com/business/coinbase-seeking-us-sec-approval-offer-blockchain-based-stocks-2025-06-17/)) 
+
+- **Federal authorities in the U.S.** announced a historic crypto bust, seizing $225 million in tokens linked to investment scams. ([The Block](https://www.theblock.co/post/358774/feds-file-to-seize-225-million-worth-of-crypto-in-historic-us-secret-service-bust))
+
 - Czech political scandal: https://decrypt.co/326018/bitcoin-scandal-fails-czech-government-no-confidence-vote
 
-- The US Secret Service, FBI, and U.S. Attorney’s Office have announced a historic bust, seizing $225 million in cryptocurrency linked to investment scams. The operation, which involved blockchain analysis, targeted a vast network of digital wallets and identified hundreds of victims worldwide, highlighting the ongoing issue of crypto-related investment scams. ([The Block](https://www.theblock.co/post/358774/feds-file-to-seize-225-million-worth-of-crypto-in-historic-us-secret-service-bust)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
 
 ### Market Snapshot
 
@@ -103,13 +102,13 @@
 
 - Bitcoin security and hardware continue to push ahead. https://cointelegraph.com/news/project-eleven-raises-6m-to-defend-bitcoin-from-quantum-attacks | https://www.reuters.com/world/china/dominant-chinese-makers-bitcoin-mining-machines-set-up-us-production-beat-2025-06-18/
 
-- Researchers at OpenAI discovered that AI models can develop a "bad boy persona" when fine-tuned on malicious data, leading to undesirable behavior. However, the team found that this misalignment can be reversed by fine-tuning the model on truthful data, with as few as 100 good samples needed to realign the model. ([MIT Technology Review](https://www.technologyreview.com/2025/06/18/1119042/openai-can-rehabilitate-ai-models-that-develop-a-bad-boy-persona/)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Researchers at OpenAI have been studying** how to rehabilitate AI models that have developed a "bad boy persona" from being trained on malicious data. ([MIT Technology Review](https://www.technologyreview.com/2025/06/18/1119042/openai-can-rehabilitate-ai-models-that-develop-a-bad-boy-persona/))
 
 ### Odds & Ends
 
-- **Huh?** The city of Spokane, Washington, banned bitcoin ATMs from its streets, ostensibly to prevent crypto scams. ([Decrypt](https://decrypt.co/325791/washington-city-bans-bitcoin-atms-amid-surge-in-crypto-scams))
+- **The city of Spokane, Washington,** banned bitcoin ATMs from its streets, ostensibly to prevent crypto scams. ([Decrypt](https://decrypt.co/325791/washington-city-bans-bitcoin-atms-amid-surge-in-crypto-scams))
 
-- Speedrunning America. https://decrypt.co/325960/how-far-would-you-go-pump-meme-coin
+- **To pump his 50STATES memecoin,** Solana developer Leland King Fawcette just [set a new record](https://x.com/50StatesLIVE/status/1935724462969876602) for fastest solo travel across all 50 U.S. states. Aside from airplane flights to cover the non-contiguous states of Hawaii and Alaska, the feat largely entailed flouting posted speed limits while [driving round-the-clock](https://decrypt.co/325960/how-far-would-you-go-pump-meme-coin) in sometimes inclement weather in his Hyundai Kona.
 
 _**That's it for now. Thanks for reading the newsletter today! If you want to know more about w3w's history and (ahem) the author, that info is available [here](https://w3wnews.substack.com/about).**_
 
