--- a/2025/2025-06-22-wir.md
+++ b/2025/2025-06-22-wir.md
@@ -6,15 +6,31 @@
 
 <hr>
 
-- _**I used NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** to assist production of this edition of w3w. Final edit 100% by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._ <!-- Edit listed AIs as needed before final publication. -->
+- _**I used NotebookLM, Leo/Llama 3.1, ChatGPT, Copilot, and DALL·E 3** to assist production of this edition of w3w. Final edit 100% by me. For full details, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
 
-- _**A big thank-you** to the paid subscribers who help the w3w newsletter bring readers the latest news about Bitcoin, Ethereum, AI, and other emerging tech re-shaping the web. To join them in supporting this work, check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
+- _**A big thank-you** to w3w's paid subscribers. To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
-- _**This week I'm also happy to highlight** our affiliate Kate Zimina of Roobinium. She's that rare award-winning designer who understands web3, with experience creating [beautiful interfaces](https://dribbble.com/roobinium) for NFT apps, crypto wallets, and more. To get her help with your project, contact Kate via email digitaldesigner2047@gmail.com or via Telegram @digitaldesigner2047. When you hire Kate, a portion of your order will go toward supporting w3w. So everyone wins._ 😊
+- _**I'm also happy to highlight** our affiliate Kate Zimina of Roobinium. She's that rare award-winning designer who has deep experience creating [beautiful interfaces](https://dribbble.com/roobinium) for web3 applications. To get Kate's help on your project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
 
 <hr>
 
-The US Senate has passed the GENIUS Act, a landmark bill that establishes federal guardrails for dollar-pegged stablecoins and creates a regulated pathway for private companies to issue digital dollars. The bill, which passed with a 68-30 vote, marks a significant legislative victory for the crypto industry, which invested heavily in the 2024 election cycle. ([CNBC](https://www.cnbc.com/2025/06/17/genius-stablecoin-bill-crypto.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | NBC News says the bill surfaced new divisions in the Democratic Senate caucus: https://www.nbcnews.com/politics/congress/democratic-divisions-emerge-congress-tackles-crypto-regulation-rcna212886 | Bessent sees stablecoins bolstering USD's status globally. https://decrypt.co/326021/treasury-secretary-bessent-stablecoins-dollar-supremacy | Trump urged swift passage in the House. https://www.theblock.co/post/358821/trump-urges-house-to-pass-genius-stablecoin-bill Politico coverage of same: https://www.politico.com/live-updates/2025/06/18/congress/trump-calls-on-house-gop-to-quickly-adopt-clean-version-of-senate-passed-crypto-bill-00414161 | Circle's newly listed shares soared: https://www.coindesk.com/markets/2025/06/19/circle-rockets-after-stablecoin-bill-clears-senate-pushes-post-ipo-rally-to-over-500 | Guardian on Democrats crossing the aisle to vote for the Genius Act: https://www.theguardian.com/us-news/2025/jun/18/crypto-stablecoins-senate
+**The crypto industry just scored** its first big legislative victory in Washington since contributing heavily to President Trump's election in November.
+
+By a 68-30 vote Tuesday, the Senate [passed the Genius Act](https://www.cnbc.com/2025/06/17/genius-stablecoin-bill-crypto.html), which would establish federal guardrails for dollar-pegged stablecoins and create a regulated pathway for private companies to issue digital dollars.
+
+Trump immediately urged [quick passage in the House](https://www.theblock.co/post/358821/trump-urges-house-to-pass-genius-stablecoin-bill) as well, so he could sign the measure into law. [But it is unclear](https://www.politico.com/live-updates/2025/06/18/congress/trump-calls-on-house-gop-to-quickly-adopt-clean-version-of-senate-passed-crypto-bill-00414161) whether that will indeed be the approach of House members. It's possible they could instead focus on advancing a separate bill, dubbed the Stable Act, that has [already passed](https://cointelegraph.com/news/us-financial-services-passes-stable-act-stablecoin-bill) the House Financial Services Committee.
+
+Other notable details:
+
+- **Blue defections:** 18 Senate Democrats [voted for the Genius Act](https://www.nbcnews.com/politics/congress/democratic-divisions-emerge-congress-tackles-crypto-regulation-rcna212886), splitting with New York's Sen. Chuck Schumer, who is the Senate Democratic leader, and Massachusetts' Sen. Elizabeth Warren, a staunch crypto critic. By contrast, only two Senate Republicans -- Rand Paul of Kentucky and Josh Hawley of Missouri -- crossed party lines to vote against the bill.
+
+- Conflicts. In a bipartisan effort, the US Senate passed the Genius Act, a bill aimed at regulating stablecoins, a type of cryptocurrency pegged to the US dollar, with a 68-30 vote. The legislation, which still faces hurdles before reaching the president's desk, establishes guardrails and consumer protections for stablecoins and marks the first step in what the industry hopes will be a wave of bills to bolster its legitimacy. ([The Guardian](https://www.theguardian.com/us-news/2025/jun/18/crypto-stablecoins-senate)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- Treasury Secretary Scott Bessent has emphasized the potential for stablecoins to reinforce the US dollar's global dominance, pushing back against critics who view crypto as a threat. The comments come as the Senate passes the GENIUS Act, a landmark bill establishing a framework for issuing and trading stablecoins in the US, with industry leaders welcoming the move despite ongoing political tensions and concerns about conflicts of interest. ([Decrypt](https://decrypt.co/326021/treasury-secretary-bessent-stablecoins-dollar-supremacy)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+
+- Shares in Circle [soared](https://news.google.com/read/CBMixwFBVV95cUxQY21xMTVzTWlxQWVxNjJ3X2xWUGJvd0hZZnBfVWkyUGxUa1NPZkJUMGF3SHpDZzhGelVMTzE1MmtzRkRfdmJFVmhLcWZ6alQ5eEZzcktDSDJCdVJac05VR1dIRHFSazREeUxCM3lVOXVWZzlfZm81U2FZZGU4NExHVkwzRXE5Yl9ERGtUaV9WTVQ0d0VCVmFLU2hZdXZXWkctLUFQbGZpRTdHWlBBeGNnNGhlTWI3dC1VbGZqRndGcnQ0WHdWdjBj?hl=en-US&gl=US&ceid=US%3Aen) on the news, adding to the USDC issuer's gains since going public on June 5. Circle's stock has now risen more than sixfold since the listing.
+
+<!-- Wrap up -->
 
  <hr>
 
@@ -27,23 +43,19 @@ The US Senate has passed the GENIUS Act, a landmark bill that establishes federa
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- Social surpassed TV as consumers' primary news source for the first time, according to a new Reuters/Oxford study. https://www.niemanlab.org/2025/06/for-the-first-time-social-media-overtakes-tv-as-americans-top-news-source/ | Full Reuters report: https://reutersinstitute.politics.ox.ac.uk/digital-news-report/2025
+- **After a years-long transition,** social media has [finally overtaken](https://www.niemanlab.org/2025/06/for-the-first-time-social-media-overtakes-tv-as-americans-top-news-source/) traditional forms of television as Americans' top news source, according to the 2025 edition of the [Digital News Report](https://reutersinstitute.politics.ox.ac.uk/digital-news-report/2025) from Oxford's Reuters Institute for the Study of Journalism.
 
-- Amazon's workforce is expected to shrink in the coming years as the company adopts more generative artificial intelligence tools and agents, according to CEO Andy Jassy. In a memo to employees, Jassy stated that the company will need fewer people for certain jobs, but more people for others, and that employees should learn how to use AI tools to get more done with smaller teams. ([CNBC](https://www.cnbc.com/2025/06/17/ai-amazon-workforce-jassy.html)) <!-- Draft news summary by Leo/Llama 3.1 8B --> | Blog post by CEO Andy Jassy: https://www.aboutamazon.com/news/company-news/amazon-ceo-andy-jassy-on-generative-ai | Jassy recommends new trainings: https://fortune.com/2025/06/19/amazons-andy-jassy-suggests-employees-go-to-ai-trainings-to-learn-how-to-get-more-done-with-scrappier-teams/
+- **Amazon CEO Andy Jassy** said Tuesday that the company's workforce will shrink in the coming years due to accelerating AI adoption. Amazon has already laid off more than 27,000 employees since 2022 and made several cuts this year. ([CNBC](https://www.cnbc.com/2025/06/17/ai-amazon-workforce-jassy.html))
 
-- **Coinbase is seeking approval** from U.S. market regulators to offer "tokenized equities." The move would allow the crypto platform to offer stock trading via blockchain networks, potentially competing with retail brokerages like Robinhood and Charles Schwab. ([Reuters](https://www.reuters.com/business/coinbase-seeking-us-sec-approval-offer-blockchain-based-stocks-2025-06-17/)) 
+- **Coinbase is seeking approval** from U.S. market regulators to offer "tokenized equities." The move would allow the crypto platform to offer stock trading via blockchain networks, potentially competing with retail brokerages like Robinhood and Charles Schwab. ([Reuters](https://www.reuters.com/business/coinbase-seeking-us-sec-approval-offer-blockchain-based-stocks-2025-06-17/))
 
 - **Federal authorities in the U.S.** announced a historic crypto bust, seizing $225 million in tokens linked to investment scams. ([The Block](https://www.theblock.co/post/358774/feds-file-to-seize-225-million-worth-of-crypto-in-historic-us-secret-service-bust))
 
-- Czech political scandal: https://decrypt.co/326018/bitcoin-scandal-fails-czech-government-no-confidence-vote
-
+- **The Czech Republic's ruling coalition narrowly survived** a no-confidence vote in parliament due to a political scandal concerning bitcoin donations, worth millions of dollars, from a convicted drug trafficker. ([Decrypt](https://decrypt.co/326018/bitcoin-scandal-fails-czech-government-no-confidence-vote))
 
 ### Market Snapshot
 
-<!-- Preliminary formatting, data in the table below for now. Update after Friday's close in NY... -->
-
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
-
 
 <table>
 
@@ -59,37 +71,37 @@ The US Senate has passed the GENIUS Act, a landmark bill that establishes federa
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td><!-- BTC weekly closing price --></td>
-     <td><!-- BTC weekly % change --></td>
-     <td><!-- BTC YTD % change --></td>
+     <td>$103,506.35</td>
+     <td>-1.5%</td>
+     <td>+10.3%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td><!-- Nasdaq 100 weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>21,626.39</td>
+     <td>-0.02%</td>
+     <td>+2.9%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td><!-- Gold weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>$3,384.40/oz</td>
+     <td>-2.0%</td>
+     <td>+28.7%</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td><!-- USD Index weekly closing price --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>98.77</td>
+     <td>+0.6%</td>
+     <td>-9.0%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td><!-- 10-year weekly closing yield --></td>
-     <td>-------------</td>
-     <td>-------------</td>
+     <td>4.375%</td>
+     <td>-0.05</td>
+     <td>-0.20</td>
    </tr>
 
 </tbody>
@@ -98,9 +110,9 @@ The US Senate has passed the GENIUS Act, a landmark bill that establishes federa
 
 ### Looking Ahead
 
-- **More crypto-related IPOs are coming to Wall Street.** Tron  https://www.wsj.com/finance/currencies/crypto-group-tron-to-go-public-in-u-s-via-reverse-merger-with-srm-entertainment-598cda51?st=4vje3U&reflink=desktopwebshare_permalink | Canadian SOL treasury company files for Nasdaq listing: https://decrypt.co/326024/canadian-firm-sol-strategies-files-with-sec-for-nasdaq-debut | Uphold? https://www.msn.com/en-us/money/other/uphold-explores-ipo-and-sale-options/ar-AA1GqzHZ
+- **More crypto-related stock listings are headed to Wall Street.** Justin Sun’s Tron will go public through a [reverse merger with SRM Entertainment](https://www.wsj.com/finance/currencies/crypto-group-tron-to-go-public-in-u-s-via-reverse-merger-with-srm-entertainment-598cda51?st=4vje3U&reflink=desktopwebshare_permalink), a small Nasdaq-listed toy company... Sol Strategies, a Toronto-based investment firm that holds $72 million of Solana tokens on its balance sheet, filed a proposal with U.S. regualtors to [list its shares](https://decrypt.co/326024/canadian-firm-sol-strategies-files-with-sec-for-nasdaq-debut) on the Nasdaq Capital Market... The trading platform Uphold said it has hired the investment bank FT Partners to explore [its corporate dealmaking options](https://www.msn.com/en-us/money/other/uphold-explores-ipo-and-sale-options/ar-AA1GqzHZ), including a possible IPO or sale to a larger financial institution.
 
-- Bitcoin security and hardware continue to push ahead. https://cointelegraph.com/news/project-eleven-raises-6m-to-defend-bitcoin-from-quantum-attacks | https://www.reuters.com/world/china/dominant-chinese-makers-bitcoin-mining-machines-set-up-us-production-beat-2025-06-18/
+- **The Bitcoin network continues to evolve in fascinating ways**. Reuters reports that Chinese manufacturers with a combined 90% global market share in Bitcoin mining computers are [setting up U.S. production facilities](https://www.reuters.com/world/china/dominant-chinese-makers-bitcoin-mining-machines-set-up-us-production-beat-2025-06-18/) to avoid tariffs... Project Eleven, a firm specializing in post-quantum cryptography, has [secured $6 million in funding](https://cointelegraph.com/news/project-eleven-raises-6m-to-defend-bitcoin-from-quantum-attacks) to develop tools that will help secure the Bitcoin network against potential quantum computing threats in the future.
 
 - **Researchers at OpenAI have been studying** how to rehabilitate AI models that have developed a "bad boy persona" from being trained on malicious data. ([MIT Technology Review](https://www.technologyreview.com/2025/06/18/1119042/openai-can-rehabilitate-ai-models-that-develop-a-bad-boy-persona/))
 
