Writing through lead section.

--- a/2025/2025-06-22-wir.md
+++ b/2025/2025-06-22-wir.md
@@ -24,13 +24,19 @@ Other notable details:
 
 - **Blue defections:** 18 Senate Democrats [voted for the Genius Act](https://www.nbcnews.com/politics/congress/democratic-divisions-emerge-congress-tackles-crypto-regulation-rcna212886), splitting with New York's Sen. Chuck Schumer, who is the Senate Democratic leader, and Massachusetts' Sen. Elizabeth Warren, a staunch crypto critic. By contrast, only two Senate Republicans -- Rand Paul of Kentucky and Josh Hawley of Missouri -- crossed party lines to vote against the bill.
 
-- Conflicts. In a bipartisan effort, the US Senate passed the Genius Act, a bill aimed at regulating stablecoins, a type of cryptocurrency pegged to the US dollar, with a 68-30 vote. The legislation, which still faces hurdles before reaching the president's desk, establishes guardrails and consumer protections for stablecoins and marks the first step in what the industry hopes will be a wave of bills to bolster its legitimacy. ([The Guardian](https://www.theguardian.com/us-news/2025/jun/18/crypto-stablecoins-senate)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **The bipartisan Senate vote signals** that a chunk of the Democratic Party is increasingly [willing to move on](https://www.theguardian.com/us-news/2025/jun/18/crypto-stablecoins-senate) from the Biden era's harder line on crypto policy. One potential stumbling block to gaining even wider legislative support, however: The Genius Act places new ethics restrictions on crypto-related conflicts of interest for members of Congress. But those new rules [don't cover the president](https://www.techrepublic.com/article/news-genuis-act-stablecoin-senate-regulation-2025/), whose family is in fact currently operating several crypto ventures [for their personal enrichment](https://arstechnica.com/tech-policy/2025/06/senate-passes-genius-act-criticized-as-gifting-trump-ample-opportunity-to-grift/).
 
-- Treasury Secretary Scott Bessent has emphasized the potential for stablecoins to reinforce the US dollar's global dominance, pushing back against critics who view crypto as a threat. The comments come as the Senate passes the GENIUS Act, a landmark bill establishing a framework for issuing and trading stablecoins in the US, with industry leaders welcoming the move despite ongoing political tensions and concerns about conflicts of interest. ([Decrypt](https://decrypt.co/326021/treasury-secretary-bessent-stablecoins-dollar-supremacy)) <!-- Draft news summary by Leo/Llama 3.1 8B -->
+- **Treasury Secretary Scott Bessent** also publicly endorsed the Genius Act, tweeting that [he's optimistic](https://x.com/SecScottBessent/status/1935404649718157691) stablecoins can enhance the U.S. dollar's status as a global reserve currency.
 
-- Shares in Circle [soared](https://news.google.com/read/CBMixwFBVV95cUxQY21xMTVzTWlxQWVxNjJ3X2xWUGJvd0hZZnBfVWkyUGxUa1NPZkJUMGF3SHpDZzhGelVMTzE1MmtzRkRfdmJFVmhLcWZ6alQ5eEZzcktDSDJCdVJac05VR1dIRHFSazREeUxCM3lVOXVWZzlfZm81U2FZZGU4NExHVkwzRXE5Yl9ERGtUaV9WTVQ0d0VCVmFLU2hZdXZXWkctLUFQbGZpRTdHWlBBeGNnNGhlTWI3dC1VbGZqRndGcnQ0WHdWdjBj?hl=en-US&gl=US&ceid=US%3Aen) on the news, adding to the USDC issuer's gains since going public on June 5. Circle's stock has now risen more than sixfold since the listing.
+- **Shares in Circle soared** on news of the Genius Act's Senate passage. The USDC issuer's shares are now [up more than sixfold](https://news.google.com/read/CBMixwFBVV95cUxQY21xMTVzTWlxQWVxNjJ3X2xWUGJvd0hZZnBfVWkyUGxUa1NPZkJUMGF3SHpDZzhGelVMTzE1MmtzRkRfdmJFVmhLcWZ6alQ5eEZzcktDSDJCdVJac05VR1dIRHFSazREeUxCM3lVOXVWZzlfZm81U2FZZGU4NExHVkwzRXE5Yl9ERGtUaV9WTVQ0d0VCVmFLU2hZdXZXWkctLUFQbGZpRTdHWlBBeGNnNGhlTWI3dC1VbGZqRndGcnQ0WHdWdjBj?hl=en-US&gl=US&ceid=US%3Aen) since the company's recent IPO on June 5.
 
-<!-- Wrap up -->
+**Finally, I think it's relevant to point out** that the Genius Act vote happened *before* this weekend's U.S. military strikes in Iran. It's unclear at this point how that might change the legislative workflow in Congress going forward, perhaps crowding out members' time, energy, and attention to other issues like stablecoins.
+
+Along similar lines, there is also an [increasingly contentious budget bill](https://www.newsweek.com/donald-trump-big-beautiful-bill-poll-2087286) for the entire U.S. government still pending final passage.
+
+But for the time being, crypto world can certainly celebrate a big Washington victory right now. May we all soon return to a world where financial regulation is the thorniest matter that America has to contend with.
+
+
 
  <hr>
 
@@ -41,7 +47,7 @@ Other notable details:
 
 ### Five Things: June 15-21, 2025
 
-*The week's top headlines about emerging technologies and trends reshaping the web:*
+*The week's top headlines about the emerging technologies and trends reshaping the web:*
 
 - **After a years-long transition,** social media has [finally overtaken](https://www.niemanlab.org/2025/06/for-the-first-time-social-media-overtakes-tv-as-americans-top-news-source/) traditional forms of television as Americans' top news source, according to the 2025 edition of the [Digital News Report](https://reutersinstitute.politics.ox.ac.uk/digital-news-report/2025) from Oxford's Reuters Institute for the Study of Journalism.
 
