--- a/2025/2025-06-22-wir.md
+++ b/2025/2025-06-22-wir.md
@@ -1,5 +1,5 @@
-# tktk
-## tktk
+# Genius Act clears Senate, underscoring crypto’s political maturation
+## On an increasingly bipartisan basis, Washington is starting to treat digital assets as finance, not fad.
 
 ![Smartphone with a folder open containing several social apps](https://images.unsplash.com/photo-1520525003249-2b9cdda513bc?q=80&w=1770&auto=format&fit=crop&ixlib=rb-4.1.0&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D)
 *Photo illustration by Louis Velazquez via Unsplash*
