Copyedits based on suggestions by Copilot

--- a/2025/2025-06-22-wir.md
+++ b/2025/2025-06-22-wir.md
@@ -18,25 +18,23 @@
 
 By a 68-30 vote Tuesday, the Senate [passed the Genius Act](https://www.cnbc.com/2025/06/17/genius-stablecoin-bill-crypto.html), which would establish federal guardrails for dollar-pegged stablecoins and create a regulated pathway for private companies to issue digital dollars.
 
-Trump immediately urged [quick passage in the House](https://www.theblock.co/post/358821/trump-urges-house-to-pass-genius-stablecoin-bill) as well, so he could sign the measure into law. [But it is unclear](https://www.politico.com/live-updates/2025/06/18/congress/trump-calls-on-house-gop-to-quickly-adopt-clean-version-of-senate-passed-crypto-bill-00414161) whether that will indeed be the approach of House members. It's possible they could instead focus on advancing a separate bill, dubbed the Stable Act, that has [already passed](https://cointelegraph.com/news/us-financial-services-passes-stable-act-stablecoin-bill) the House Financial Services Committee.
+Trump immediately urged [quick passage by the House](https://www.theblock.co/post/358821/trump-urges-house-to-pass-genius-stablecoin-bill) as well, so he could sign the measure into law. [But it is unclear](https://www.politico.com/live-updates/2025/06/18/congress/trump-calls-on-house-gop-to-quickly-adopt-clean-version-of-senate-passed-crypto-bill-00414161) whether House members are in a mood to effectively rubber stamp the Genius Act, as the president suggests. It's possible they could instead focus on advancing a separate bill, dubbed the Stable Act, that has [already passed](https://cointelegraph.com/news/us-financial-services-passes-stable-act-stablecoin-bill) the House Financial Services Committee.
 
 Other notable details:
 
-- **Blue defections:** 18 Senate Democrats [voted for the Genius Act](https://www.nbcnews.com/politics/congress/democratic-divisions-emerge-congress-tackles-crypto-regulation-rcna212886), splitting with New York's Sen. Chuck Schumer, who is the Senate Democratic leader, and Massachusetts' Sen. Elizabeth Warren, a staunch crypto critic. By contrast, only two Senate Republicans -- Rand Paul of Kentucky and Josh Hawley of Missouri -- crossed party lines to vote against the bill.
+- **Blue defections:** Eighteen Senate Democrats [voted for the Genius Act](https://www.nbcnews.com/politics/congress/democratic-divisions-emerge-congress-tackles-crypto-regulation-rcna212886). In doing so, they split with senior members of their caucus, including New York's Sen. Chuck Schumer, who is the Senate Democratic leader, and Massachusetts' Sen. Elizabeth Warren, a longtime crypto critic. By contrast, only two Senate Republicans -- Rand Paul of Kentucky and Josh Hawley of Missouri -- crossed party lines to vote *against* the bill.
 
 - **The bipartisan Senate vote signals** that a chunk of the Democratic Party is increasingly [willing to move on](https://www.theguardian.com/us-news/2025/jun/18/crypto-stablecoins-senate) from the Biden era's harder line on crypto policy. One potential stumbling block to gaining even wider legislative support, however: The Genius Act places new ethics restrictions on crypto-related conflicts of interest for members of Congress. But those new rules [don't cover the president](https://www.techrepublic.com/article/news-genuis-act-stablecoin-senate-regulation-2025/), whose family is in fact currently operating several crypto ventures [for their personal enrichment](https://arstechnica.com/tech-policy/2025/06/senate-passes-genius-act-criticized-as-gifting-trump-ample-opportunity-to-grift/).
 
 - **Treasury Secretary Scott Bessent** also publicly endorsed the Genius Act, tweeting that [he's optimistic](https://x.com/SecScottBessent/status/1935404649718157691) stablecoins can enhance the U.S. dollar's status as a global reserve currency.
 
-- **Shares in Circle soared** on news of the Genius Act's Senate passage. The USDC issuer's shares are now [up more than sixfold](https://news.google.com/read/CBMixwFBVV95cUxQY21xMTVzTWlxQWVxNjJ3X2xWUGJvd0hZZnBfVWkyUGxUa1NPZkJUMGF3SHpDZzhGelVMTzE1MmtzRkRfdmJFVmhLcWZ6alQ5eEZzcktDSDJCdVJac05VR1dIRHFSazREeUxCM3lVOXVWZzlfZm81U2FZZGU4NExHVkwzRXE5Yl9ERGtUaV9WTVQ0d0VCVmFLU2hZdXZXWkctLUFQbGZpRTdHWlBBeGNnNGhlTWI3dC1VbGZqRndGcnQ0WHdWdjBj?hl=en-US&gl=US&ceid=US%3Aen) since the company's recent IPO on June 5.
+- **Shares in Circle soared** on news of the Genius Act's Senate passage. The USDC issuer's shares have now increased [more than sixfold](https://news.google.com/read/CBMixwFBVV95cUxQY21xMTVzTWlxQWVxNjJ3X2xWUGJvd0hZZnBfVWkyUGxUa1NPZkJUMGF3SHpDZzhGelVMTzE1MmtzRkRfdmJFVmhLcWZ6alQ5eEZzcktDSDJCdVJac05VR1dIRHFSazREeUxCM3lVOXVWZzlfZm81U2FZZGU4NExHVkwzRXE5Yl9ERGtUaV9WTVQ0d0VCVmFLU2hZdXZXWkctLUFQbGZpRTdHWlBBeGNnNGhlTWI3dC1VbGZqRndGcnQ0WHdWdjBj?hl=en-US&gl=US&ceid=US%3Aen) since the company's recent IPO on June 5.
 
 **Finally, I think it's relevant to point out** that the Genius Act vote happened *before* this weekend's U.S. military strikes in Iran. It's unclear at this point how that might change the legislative workflow in Congress going forward, perhaps crowding out members' time, energy, and attention to other issues like stablecoins.
 
 Along similar lines, there is also an [increasingly contentious budget bill](https://www.newsweek.com/donald-trump-big-beautiful-bill-poll-2087286) for the entire U.S. government still pending final passage.
 
-But for the time being, crypto world can certainly celebrate a big Washington victory right now. May we all soon return to a world where financial regulation is the thorniest matter that America has to contend with.
-
-
+But for the time being, crypto world can certainly celebrate a big Washington victory. May we all soon live in a world in which financial regulation is the thorniest matter that America has to debate.
 
  <hr>
 
