Add links to some news articles of interest

--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -8,7 +8,8 @@
 
 <!--
 
-Boilerplate with AI credits, disclaimers, etc goes here. Pickup from last week.
+- Boilerplate with AI credits, disclaimers, etc goes here. Pickup from last week.
+- Taking next weekend off for my b-day!
 
 -->
 
@@ -31,15 +32,17 @@ Boilerplate with AI credits, disclaimers, etc goes here. Pickup from last week.
 
 *The week's top headlines about emerging technologies and trends reshaping the web:*
 
-- tk
+- Federal judge rules that use of copyrighted books by OpenAI and Meta was fair use. https://decrypt.co/327137/meta-openai-copyrighted-books-ai-fair-use
 
-- Pompliano launching a new bitcoin treasury company: https://decrypt.co/326510/pomplianos-bitcoin-treasury-procap-unveils-1-billion-spac-merger | https://www.theblock.co/post/359226/anthony-pompliano-strikes-deal-raising-over-750-million-to-create-bitcoin-treasury-firm
+- **Circle's shares continue to soar post-IPO,** recently pushing the stablecoin issuer's valuation [within reach of Coinbase](https://www.coindesk.com/markets/2025/06/23/circle-hits-new-record-with-market-cap-nearing-that-of-coinbase). | Latest Coinbase rally: https://decrypt.co/327197/marching-forward-coinbase-stock-eyes-record-close-regulatory-hope
 
-- Trump Media confirmed plans to add bitcoin to to its treasury. https://decrypt.co/326520/trump-media-reaffirms-bitcoin-treasury-plan-share-buyback
+- **Kraken is on a roll.** https://decrypt.co/327150/kraken-debuts-krak-crypto-fiat-payments-app-110-countries | https://decrypt.co/327112/kraken-license-europes-new-rules
 
-- Circle's shares cointinue to soar post-IPO, recently pushing the stablecoin issuer's valuation [within reach of Coinbase](https://www.coindesk.com/markets/2025/06/23/circle-hits-new-record-with-market-cap-nearing-that-of-coinbase).
+- New Hong Kong crypto rules encouraging tokenization of RWA: https://www.coindesk.com/policy/2025/06/26/hong-kong-sets-out-plan-to-regulate-crypto-encourage-tokenization
 
-- Car customizer is developing a bitcoin treasury strategy: https://decrypt.co/326565/wen-lambo-jaguar-land-rover-customizer-bitcoin-strategy
+- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more
+
+- Tether taking a more active role in running football club in which it owns a minority stake: https://www.coindesk.com/business/2025/06/26/tether-seeks-more-active-role-at-juventus-after-buying-over-10-of-soccer-club
 
 ### Market Snapshot
 
@@ -97,9 +100,11 @@ Boilerplate with AI credits, disclaimers, etc goes here. Pickup from last week.
 
 ### Looking Ahead
 
-- tk
-- tk
-- tk
+- Lummis says Crypto market bill will be done by Sept. 30: https://www.coindesk.com/policy/2025/06/26/key-us-senator-tells-white-house-crypto-market-structure-bill-will-be-done-by-sept-30 | https://www.theblock.co/post/359874/white-house-lawmakers-target-september-to-move-sweeping-crypto-legislation
+
+- **More crypto treasuries:** Pompliano launching a new bitcoin treasury company: https://decrypt.co/326510/pomplianos-bitcoin-treasury-procap-unveils-1-billion-spac-merger | https://www.theblock.co/post/359226/anthony-pompliano-strikes-deal-raising-over-750-million-to-create-bitcoin-treasury-firm | Trump Media confirmed plans to add bitcoin to to its treasury. https://decrypt.co/326520/trump-media-reaffirms-bitcoin-treasury-plan-share-buyback | https://www.coindesk.com/business/2025/06/26/solana-focused-upexi-to-tokenize-shares-added-56k-sol-to-holdings | https://www.theblock.co/post/359875/solana-treasury-firm-upexi-plans-to-tokenize-public-shares-via-superstates-opening-bell | Car customizer is developing a bitcoin treasury strategy: https://decrypt.co/326565/wen-lambo-jaguar-land-rover-customizer-bitcoin-strategy |
+
+- Shin on JPM, Shopify coming to Base. https://dcs-spotify.megaphone.fm/LSHML3195392189.mp3?key=6a44064f60ef00b8b5a205f0c0071621&request_event_id=1f0f38eb-ab62-4079-8e59-583f648cf698&session_id=1f0f38eb-ab62-4079-8e59-583f648cf698&timetoken=1750967217_3DDD11D40AB5C6D83CE6DF45CC3A8820
 
 ### Odds & Ends
 
