Prelim market stats, new photo, writethrough in all sections

--- a/2025/2025-06-29-wir.md
+++ b/2025/2025-06-29-wir.md
@@ -1,25 +1,33 @@
 # tktk
 ## tktk
 
-![Black-and-white photo illustration of a woman reading a newspaper](https://w3w.news/img/newsreader-illo-melpo-tsiliaki-DALLE3-1920.jpg)
-*Photo illustration by Melpo Tsiliaki × DALL·E 3*
+![Charging bull sculpture on Wall Street](https://blog.pmckay.com/img/bull-2500.jpg)
+*Photo by Fabio Spano via Unsplash*
 
 <hr>
 
-<!--
+- _**I used several AI apps** to assist production of this edition of w3w. Final edit 100% by me. For fuller detail, see the newsletter's [commit history](https://github.com/peteramckay/w3wnewsletter/commits) on GitHub._
 
-- Boilerplate with AI credits, disclaimers, etc goes here. Pickup from last week.
-- Taking next weekend off for my b-day!
+- _**A big thank-you to w3w's paid subscribers!** To join them in supporting this work, please check out our paid plans [on Substack](https://w3wnews.substack.com/subscribe)._
 
--->
-
-- tk
-- tk
-- tk
+- _**I'm also happy to highlight** our affiliate Kate Zimina of Roobinium. She's that rare award-winning designer who has deep experience creating [beautiful interfaces](https://dribbble.com/roobinium) for web3 applications. To get Kate's help on your project, email digitaldesigner2047@gmail.com or DM the Telegram handle @digitaldesigner2047._
 
 <hr>
 
 **Call me Ishmael.** Lead item goes here. Yadda yadda yadda.
+
+<!--
+
+A look at first-half markets. Quotes, factoids, etc. Also note up high that you're going to take next week off....
+
+-->
+
+- TK
+
+- TK
+
+- **Circle's shares continue to soar post-IPO,** recently pushing the stablecoin issuer's valuation [within reach of Coinbase](https://www.coindesk.com/markets/2025/06/23/circle-hits-new-record-with-market-cap-nearing-that-of-coinbase). | Latest Coinbase rally: https://decrypt.co/327197/marching-forward-coinbase-stock-eyes-record-close-regulatory-hope
+
 
  <hr>
 
@@ -34,19 +42,19 @@
 
 - Federal judge rules that use of copyrighted books by OpenAI and Meta was fair use. https://decrypt.co/327137/meta-openai-copyrighted-books-ai-fair-use
 
-- **Circle's shares continue to soar post-IPO,** recently pushing the stablecoin issuer's valuation [within reach of Coinbase](https://www.coindesk.com/markets/2025/06/23/circle-hits-new-record-with-market-cap-nearing-that-of-coinbase). | Latest Coinbase rally: https://decrypt.co/327197/marching-forward-coinbase-stock-eyes-record-close-regulatory-hope
-
 - **Kraken is on a roll.** https://decrypt.co/327150/kraken-debuts-krak-crypto-fiat-payments-app-110-countries | https://decrypt.co/327112/kraken-license-europes-new-rules
 
 - New Hong Kong crypto rules encouraging tokenization of RWA: https://www.coindesk.com/policy/2025/06/26/hong-kong-sets-out-plan-to-regulate-crypto-encourage-tokenization
 
-- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more
+- Metaplanet's bitcoin holdings surpassed those of Tesla. https://www.theblock.co/post/359880/the-daily-metaplanet-surpasses-tesla-in-btc-holdings-bit-digital-gives-up-on-bitcoin-mining-for-ethereum-treasury-play-and-more | Robotaxi rollout. <!-- Link TK -->
 
 - Tether taking a more active role in running football club in which it owns a minority stake: https://www.coindesk.com/business/2025/06/26/tether-seeks-more-active-role-at-juventus-after-buying-over-10-of-soccer-club
 
 ### Market Snapshot
 
 *A quick look at some major indicators as of Friday's market close on Wall Street. For fuller detail, including additional indexes and asset classes, see my spreadsheet [here](https://docs.google.com/spreadsheets/d/11XuSerOv1DG7vFWAkwoXehOe4G4xDMm6LSNL7SAL4vA/edit?usp=sharing).*
+
+<!-- Preliminary stats for now. Need updates after Friday's close. -->
 
 <table>
 
@@ -62,37 +70,38 @@
   <tbody>
    <tr>
      <td>Bitcoin</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>$107,467.40</td>
+     <td>+3.8%</td>
+     <td>+14.5%</td>
    </tr>
 
    <tr>
      <td>Nasdaq 100</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>22,447.29</td>
+     <td>+3.8%</td>
+     <td>+6.8%</td>
    </tr>
 
    <tr>
      <td>Gold</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>$3,336.00/oz.</td>
+     <td>-1.4%</td>
+     <td>+26.9%
+</td>
    </tr>
 
    <tr>
      <td>USD Index</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>$97.35</td>
+     <td>-1.4%</td>
+     <td>-10.3%</td>
    </tr>
 
    <tr>
      <td>10-yr U.S.<br> Treasury Yield</td>
-     <td></td>
-     <td></td>
-     <td></td>
+     <td>4.253%</td>
+     <td>-0.12</td>
+     <td>-0.32</td>
    </tr>
 
 </tbody>
